# hash_visualiser

./: .gitignore  Cargo.toml  LICENSE  README.md  hv_grammar.ebnf  index.html
.cargo/: config.toml
docs/: Mockups.pptx
editors/: README.md
editors/tree-sitter-hv/: .gitignore  grammar.js  package-lock.json  package.json  tree-sitter.json
editors/tree-sitter-hv/queries/: highlights.scm
editors/tree-sitter-hv/src/: grammar.json  node-types.json  parser.c
editors/zed/: extension.toml
editors/zed/grammars/: hv.wasm
hv/: 01_add.hv  02_subtract.hv  04_or.hv  06_shift_right.hv  07_shift_left.hv  sha256.hv  sha3.hv
hv/binary_operations/: 01_add.hv  02_subtract.hv  03_not.hv  04_and.hv  05_xor.hv  09_arithmetic_shift_right.hv  10_rotate_left.hv  11_rotate_right.hv
hv/composition/: 01_and_then_xor.hv  02_majority.hv  03_majority_expanded.hv  04_choose.hv
hv/sha3/: theta.hv  theta_c.hv  theta_d.hv  theta_mix.hv
src/: lib.rs  main.rs  web.rs
src/ast/: ebnf_02.rs  ebnf_03.rs  ebnf_04.rs  ebnf_05.rs  ebnf_06.rs  ebnf_07.rs  ebnf_08.rs  ebnf_09.rs  ebnf_10.rs  ebnf_11.rs  mod.rs  unit_tests.rs
src/error/: graph_error.rs  lex_error.rs  mod.rs  parse_error.rs
src/graph/: kahn_sort.rs  mod.rs  pipeline_tests.rs  unit_tests.rs
src/lexer/: duration_unit.rs  mod.rs  span.rs  token.rs  unit_tests.rs
src/parser/: ebnf_02.rs  ebnf_03.rs  ebnf_04.rs  ebnf_05.rs  ebnf_06.rs  ebnf_07.rs  ebnf_08.rs  ebnf_09.rs  ebnf_10.rs  ebnf_11.rs  mod.rs  tests.rs  unit_tests.rs
src/parser/unit_tests/: ebnf_02_tests.rs  ebnf_03_tests.rs  ebnf_04_tests.rs  ebnf_05_tests.rs  (+7 more)
src/render/: grid_spec.rs  layout.rs  map.rs  mod.rs  rect.rs  reduce.rs  routing.rs  unit_tests.rs  viz_node.rs
web/: index.html  renderer.js  style.css
web-server/: Cargo.toml
web-server/src/: main.rs
(+17 files in other folders)
