[package]
name = "web-server"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
actix-web = "4"
actix-files = "0.6"

# Live-reload: watch the hv/ folder and push changes to the browser over Server-Sent Events.
notify = "8"
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"

# JSON for the file-list endpoint and the per-file live-reload messages.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
